Click result to expand/collapse. fix refresh.

--- a/views/results.css
+++ b/views/results.css
@@ -26,6 +26,9 @@
 
 .result {
 	margin-bottom: 0.5em;
+	cursor: pointer;
 }
 
-
+.hide {
+	display: none;
+}
